First release. Still lots of bugs

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="MIT"
 modId="hungrychests"
 version="${file.jarVersion}"
 displayName="Hungry Chests"
-# logoFile="hungrychests.png"
+logoFile="pack.png"
 authors="ChiefArug"
 displayTest="MATCH_VERSION"
 description='''Loot is too easy to get. This mod solves that problem! 
